--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-pascalpp",
+  "name": "eslint-plugin-wrap-props",
   "version": "0.0.8",
   "description": "ESLint formatting rules",
   "keywords": [
