--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/eslint-parser": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
+    "debug": "^4.3.1",
     "eslint": "^7.26.0",
     "mocha": "^7.2.0"
   },
